k8s/litellm/service.yml
apiVersion: v1
kind: Service
metadata:
  name: litellm
  namespace: ai-lab
  labels:
    app: litellm
spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: http
  selector:
    app: litellm
